--- a/views/patients_view.xml
+++ b/views/patients_view.xml
@@ -36,6 +36,12 @@
                          <field name="image" />
                 </group>
             </sheet>
+            <!-- widget oe chattaer -->
+            <div class="oe_chatter">
+                <field name="message_follower_ids" widget="mail_followers"/>
+                <field name="activity_ids" widget="mail_activity"/>
+                <field name="message_ids" widget="mail_thread" options="{'post_refresh':'recipients'}"/>
+            </div>
         </form>
         </field>
     </record>
