create sequence odoo

--- a/views/patients_view.xml
+++ b/views/patients_view.xml
@@ -6,6 +6,7 @@
         <field name="model">hospital.patient</field>
         <field name="arch" type="xml">
             <tree string="Patients">
+                <field name="name_seq" />
                 <field name="patient_name" />
                 <field name="patient_age" />
                 <field name="notes" />
@@ -22,6 +23,11 @@
         <field name="arch" type="xml">
         <form string="Patients">
             <sheet>
+                <div class="oe_title">
+                    <h1>
+                        <field name="name_seq" readonly="1"/>
+                    </h1>
+                </div>
                 <group>
                     <group>
                          <field name="patient_name" />
