Create Compute field odoo

--- a/views/patients_view.xml
+++ b/views/patients_view.xml
@@ -9,6 +9,7 @@
                 <field name="name_seq" />
                 <field name="patient_name" />
                 <field name="patient_age" />
+                <field name="age_group" />
                 <field name="gender" />
                 <field name="notes" />
                 <field name="image" />
@@ -36,6 +37,7 @@
                     </group>
                     <group>
                          <field name="patient_age" />
+                         <field name="age_group" />
                          <field name="gender" />
                     </group>
                 </group>
