--- a/views/patients_view.xml
+++ b/views/patients_view.xml
@@ -80,6 +80,7 @@
         <field name="patient_name">Patients</field>
         <field name="res_model">hospital.patient</field>
         <field name="view_type">form</field>
+        <field name="context">{"search_default_male":1}</field>
         <field name="view_mode">tree,form</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
