--- a/views/patients_view.xml
+++ b/views/patients_view.xml
@@ -25,25 +25,28 @@
         <field name="arch" type="xml">
         <form string="Patients">
             <sheet>
+                    <field name="image" widget="image" class="oe_avatar" />
                 <div class="oe_title">
-                    <h1>
+                    <h1>    
                         <field name="name_seq" readonly="1"/>
                     </h1>
                 </div>
                 <group>
                     <group>
                          <field name="patient_name" />
-                         <field name="name" />
+                         <field name="patient_age" />
+                         <field name="gender" />
+                         
                     </group>
                     <group>
-                         <field name="patient_age" />
+                         <field name="name" />
                          <field name="age_group" />
-                         <field name="gender" />
+                         
                     </group>
                 </group>
                 <group>
                          <field name="notes" />
-                         <field name="image" />
+                         <!-- <field name="image" /> -->
                 </group>
             </sheet>
             <!-- widget oe chattaer -->
