--- a/views/patients_view.xml
+++ b/views/patients_view.xml
@@ -80,7 +80,7 @@
     <!-- action for patient menu -->
     <record id="action_patient" model="ir.actions.act_window">
         <field name="type">ir.actions.act_window</field>
-        <field name="patient_name">Patients</field>
+        <field name="name">Patients</field>
         <field name="res_model">hospital.patient</field>
         <field name="view_type">form</field>
         <field name="context">{"search_default_male":1}</field>
