create smart button type objrct with counting appointment

--- a/views/patients_view.xml
+++ b/views/patients_view.xml
@@ -25,7 +25,12 @@
         <field name="arch" type="xml">
             <form string="Patients">
                 <sheet>
-                        <field name="image" widget="image" class="oe_avatar" />
+                    <div class="oe_button_box" name="button_box">
+                        <button name="open_patient_appointment" type="object" class="oe_stat_button" icon="fa-calendar">
+                            <field name="appointment_count" string="Appointment" widget="statinfo"/>
+                        </button>
+                    </div>
+                    <field name="image" widget="image" class="oe_avatar" />
                     <div class="oe_title">
                         <h1>    
                             <field name="name_seq" readonly="1"/>
