--- a/views/appointment_view.xml
+++ b/views/appointment_view.xml
@@ -20,6 +20,9 @@
         <field name="model">hospital.appointment</field>
         <field name="arch" type="xml">
             <form string="Appointments">
+                <header>
+                    <field name="state" widget="statusbar"/>
+                </header>
                 <sheet>
                     <div class="oe_title">
                          <label for="name" string="Appointment"/>
