--- a/views/appointment_view.xml
+++ b/views/appointment_view.xml
@@ -21,6 +21,9 @@
         <field name="arch" type="xml">
             <form string="Appointments">
                 <header>
+                    <button name="action_confirm" string="Confirm" type="object" class="oe_highlight" />
+                    <button name="action_done" string="Done" type="object" class="oe_highlight" />
+                    <button name="action_cancel" string="Cancel" type="object" class="oe_highlight" />
                     <field name="state" widget="statusbar"/>
                 </header>
                 <sheet>
