--- a/views/appointment_view.xml
+++ b/views/appointment_view.xml
@@ -35,6 +35,7 @@
                     </div>
                     <group>
                         <group>
+                            <!-- <field name="patient_id" options="{'no_create':True, 'no_create_edit':True,'no_open':True}"/> -->
                             <field name="patient_id"/>
                             <field name="patient_age"/>
                         </group>
@@ -46,6 +47,18 @@
                     <group>
                         <field name="notes"/>
                     </group>
+                    <notebook>
+                        
+                        <page string="Docter Prescription">
+                        <group>
+                            <field name="doctor_notes"/>
+                        </group>
+                        </page>
+                        
+                        <page  string="Pharmacy">
+                            <field name="pharmacy_notes"/>
+                        </page>
+                    </notebook>
                 </sheet>
                 <!-- widget oe chattaer -->
                 <div class="oe_chatter">
