--- a/views/patients_view.xml
+++ b/views/patients_view.xml
@@ -116,5 +116,5 @@
 
     <!-- menu hospital  -->
     <menuitem id="hospital_root" name="Hospital" sequence="0" web_icon="om_hospital,static/description/icon.png"/>
-    <menuitem id="hospital_patient" name="Patient" parent="hospital_root" action="action_patient"/>
+    <menuitem id="hospital_patient" name="Patient" parent="hospital_root" action="action_patient" sequence="1"/>
 </odoo>
