--- a/views/patients_view.xml
+++ b/views/patients_view.xml
@@ -20,7 +20,7 @@
             <tree string="Patients">
                 <field name="name_seq" />
                 <field name="patient_name" />
-                <field name="patient_age" />
+                <field name="patient_age" avg="Average of Age" />
                 <field name="age_group" />
                 <field name="gender" />
                 <field name="notes" />
