--- a/reports/report.xml
+++ b/reports/report.xml
@@ -5,6 +5,7 @@
     model="hospital.patient"
     string="Patient Card"
     report_type="qweb-pdf"
+    menu="True"
     name="om_hospital.report_patient"
     file="om_hospital.report_patient"
     />
