--- a/views/patients_view.xml
+++ b/views/patients_view.xml
@@ -53,12 +53,12 @@
                     <field name="image" widget="image" class="oe_avatar" />
                     <div class="oe_title">
                         <h1>    
-                            <field name="name_seq" readonly="1"/>
+                            <field name="patient_name" readonly="1"/>
                         </h1>
                     </div>
                     <group>
                         <group>
-                            <field name="patient_name" />
+                            <field name="name_seq" />
                             <field name="patient_age" />
                             <field name="gender" />
                             
