--- a/views/appointment_view.xml
+++ b/views/appointment_view.xml
@@ -50,9 +50,25 @@
                     <notebook>
                         
                         <page string="Docter Prescription">
-                        <group>
-                            <field name="doctor_notes"/>
-                        </group>
+                        
+                            <field name="appointment_lines">
+                                <tree editable="bottom">
+                                    <field name="appointment_id" invisible="1"/>
+                                    <field name="product_id" />
+                                    <field name="product_qty" />
+                                </tree>
+                                <form>
+                                    <group>
+                                        <group>
+                                            <field name="product_id" />
+                                        </group>
+                                        <group>
+                                            <field name="product_qty" />
+                                        </group>
+                                    </group>
+                                </form>
+                            </field>
+                        
                         </page>
                         
                         <page  string="Pharmacy">
