--- a/views/patients_view.xml
+++ b/views/patients_view.xml
@@ -66,7 +66,7 @@
                         <group>
                             <field name="name" />
                             <field name="age_group" />
-                            <field name="doctor_id" />
+                                <field name="doctor_id" options="{'no_create_edit':True, 'no_create':True, 'no_open':True}" />
 
                             
                         </group>
