Create Wizard in Odoo
Creating module wizard and call via button in odoo

--- a/views/patients_view.xml
+++ b/views/patients_view.xml
@@ -36,6 +36,9 @@
         <field name="model">hospital.patient</field>
         <field name="arch" type="xml">
             <form string="Patients">
+            <header>
+                <button name="%(om_hospital.create_appointment_wizard)d" type="action" class="oe_highlight"  string="Create Appointment" />
+            </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
                         <!-- smart button type object -->
